change load function because before is not working at server